[package]
name = "sp-sponge"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

description = "soaks up input and writes to file a given file, like moreutils sponge"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1"

[[bin]]
name="sp"
path="src/main.rs"

